# smi-rs

./: .credentials.rs  .gitignore  Cargo.toml  launch.json
.cargo/: config.toml
src/: crypto.rs  cy_http_client_api.rs  cyhal_trng.rs  http.rs  main.rs  main_no_std.rs  nfc.rs  retargetio.rs  solver.rs
