[package]
name = "smi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
panic-halt = "0.2.0"

[[bin]]
name = "smi-rs"
test = false
bench = false

[profile.dev]
opt-level = "z"   # Optimize for compilation size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
