[package]
name = "smi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
log = { version = "0.4.21", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[[bin]]
name = "smi-rs"
test = false
bench = false

[profile.dev]
opt-level = "z"   # Optimize for compilation size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
