[package]
name = "smi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.4", default-features = false }
ctr = { version = "0.9.2", default-features = false }
log = { version = "0.4.21", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
rsa = { version = "0.9.6", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[target.'cfg(not(target_os = "none"))'.dependencies]
simple_logger = "4.3.3"
reqwest = { version = "0.12.3", features = ["blocking"] }

[[bin]]
name = "smi-rs"
test = false
bench = false

[target.x86_64-unknown-linux-gnu.dependencies]
rand = "0.8.5"

[features]
crypto = []
rsa_keygen = ["crypto"]

# FIXME: Not working for host compilation
# [profile.dev]
# opt-level = "z"   # Optimize for compilation size
# codegen-units = 1 # better optimizations
# debug = true      # symbols are nice and they don't increase the size on Flash
# lto = true        # better optimizations
